@@ -7,12 +7,12 @@ Data::Gimei::Name::load('t/names.yml');
 
 use Test::More;
 
-{ # to_s
+{ # test Name#to_s
     my $name = Data::Gimei::Name->new( gender => 'male' );
     is $name->to_s, 'male, 佐藤 愛斗, さとう あいと, サトウ アイト, Aito Sato';
 }
 
-{
+{ #
     my $name = Data::Gimei::Name->new( gender => 'male' );
     is $name->kanji,    '佐藤 愛斗';
     is $name->hiragana, 'さとう あいと';
@@ -31,9 +31,18 @@ use Test::More;
     is $name->family->romaji,   'Sato';
 }
 
-{
+{ # test kanji(':')
+    my $name = Data::Gimei::Name->new( gender => 'male' );
+    is $name->kanji('/'),    '佐藤/愛斗';
+    is $name->hiragana('/'), 'さとう/あいと';
+    is $name->katakana('/'), 'サトウ/アイト';
+    is $name->romaji('/'),   'Aito/Sato';
+}
+
+{ # test Name#gender
     my $name = Data::Gimei::Name->new( gender => 'female' );
     is $name->gender, 'female';
 }
+
 
 done_testing;
