@@ -2,7 +2,8 @@ Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
 
-    - add to_s()
+    - add method to_s() to Word/Name/Address
+    - add arg separater to Name#kanji/hiragana/katakana/romaji
 
 v0.1.1 2022-06-02T03:04:17Z
 
